GenericSetup Product Changelog

  GenericSetup 1.5.0 (unreleased)

    - Fixed the upgrade step directive schema. Description is not required.

    - Introduced a new IComponentsHandlerBlacklist interface. You can register
      named utilities for it and provide sequences of interfaces which should
      not be handled by the standard components registry adapter. This allows
      more specialized export/import handlers to take full control over the
      components they care about.

    - When loading multiple profiles reload the list of steps to use after
      each import. https://bugs.launchpad.net/zope-cmf/+bug/213905


  GenericSetup 1.4.0 (2008/03/23)

    - Make getProfileImportDate handle situations where one object's id
      is a prefix of another id.


  GenericSetup 1.4.0-beta (2008/02/07)

    - During object manager imports do not throw an error when
      trying to remove an object that was already removed.

    - utils: Added MarkerInterfaceHelpers.

    - Added default values to the registerProfile ZCML directive.

    - Add a ZMI interface to find and remove invalid steps from the
      persistent registries.

    - All GenericSetup import and export steps are now registered globally.

    - Remove duplicated test (https://bugs.launchpad.net/zope-cmf/+bug/174910)

    - Don't create empty 'import_steps.xml' and 'export_steps.xml' files.

    - Fix relative paths for profile dependencies.

    - Add support for context dependencies in profiles.

    - Deprecate the version field for import steps.

    - Deprecate reading of version.txt to get the version for a profile.

    - Fire events before and after importing.

    - Use zcml to register import and export steps.


  GenericSetup 1.3.3 (unreleased)

    - Be more careful in checking context id validity.

    - tool: Fixed toolset import handler not to initialize tools again, when
      they already exist in the site.


  GenericSetup 1.3.2 (2007/09/11)
